--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1>
   {{title}}
 </h1>
+<app-search (search)=onSearch($event)></app-search>
+<app-search-results [repos]="repos"></app-search-results>
